--- a/plugin.xml
+++ b/plugin.xml
@@ -16,7 +16,7 @@
     </js-module>
     <!-- android -->
     <platform name="android">
-        <config-file target="config.xml" parent="/*">
+        <config-file target="res/xml/config.xml" parent="/*">
             <feature name="CloverPlugin" >
                 <param name="android-package" value="com.cloversdk.CloverPlugin"/>
             </feature>
